Fixed squishing of profile picture- now it crops instead of disrupting aspect ratio

--- a/frontend/src/PageLayout.module.css
+++ b/frontend/src/PageLayout.module.css
@@ -43,6 +43,7 @@
 }
 
 .profilePic {
+    object-fit: cover;
     height: 28px;
     width: 28px;
     border-radius: 50%;
