--- a/frontend/src/shared/ListenerIcons.module.css
+++ b/frontend/src/shared/ListenerIcons.module.css
@@ -3,6 +3,7 @@
 	position: relative;
 }
 .listenerImage {
+	object-fit: cover;
 	margin-left: 10px;
 	height: 30px;
 	width: 30px;
